public/css/main.css
/*!
 * Start Bootstrap - Modern Business (http://startbootstrap.com/)
 * Copyright 2013-2016 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
 */

/* Global Styles */

html,
body {
    height: 100%;
    /*background-image: url("../img/cupcakes.jpg");*/
    background-size: cover;
}

body {
    padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
}

.img-portfolio {
    margin-bottom: 30px;
}

.img-hover:hover {
    opacity: 0.8;
}
/*.container {

}*/
.navbar-inverse .navbar-nav > li > a {
    color: black;
    font-weight: bold;
}
.navbar-inverse .navbar-brand {
    color: black;
    font-weight: bold;
}
.navbar-inverse {
    background-color: #72998A;
    border-color: #080808;
}
.navbar-fixed-top {
    max-height: 340px;
    background-color: #72998A;
}
.portfolio-item {
    margin-bottom: 30px;


}


/*Body Styles*/

.jumbotron {
    padding-top: 30px;
    padding-bottom: 30px;
    margin-bottom: 30px;
    margin-top: 30px;
    color: inherit;
    background-color: rgba(255, 255, 255, 0.5);
    border: 2px solid black;
    border-radius: 2%;
}

h1.page-header {
    color: black;
}
small {
    color: white !important;
}

.item-description {
    background-color: rgba(255, 255, 255, 0.5);
    border: 2px solid black;
    border-radius: 2%;
    margin-top: 15px;
    text-align: center;

}
h3 > a {
    color: black;
}

/*featured item styles*/
.featured {
    column-width: 150px;

}
/* 404 Page Styles */

.welcome {
    font-size: 75px;
}

/*item show page style*/
.show-item-header {
    text-align: center;
}

.show-item-img {
    text-align: center;
}

.show {
    margin-top: 25px;
}

.bold {
    font-weight: bold;
}

.button-center {
    text-align: center;
}
/*profile styling*/
section{
    background: rgba(25,255,265,.2);
    border-radius: 10px;
    text-align: justify;
    padding: 15px 25px;
    margin: 50px 0;
}

/* Footer Styles */

footer {
    margin: 0 25px;
}

/* Responsive Styles */

@media(max-width:991px) {
    .customer-img,
    .img-related {
        margin-bottom: 30px;
    }
}

@media(max-width:767px) {
    .img-portfolio {
        margin-bottom: 15px;
    }

    header.carousel .carousel {
        height: 70%;
    }
}

